- Fixed bug #014721: Top menu does not display correctly when it wraps  (Merged from ezwebin trunk rev. 3812, 3817)
git-svn-id: http://svn.ez.no/svn/extensions/ezwebin/stable/1.3@3819 49f50cf4-cce6-0310-bc1e-a21d999f3d8f

--- a/packages/ezwebin_design_blue/files/default/file/site-colors.css
+++ b/packages/ezwebin_design_blue/files/default/file/site-colors.css
@@ -150,6 +150,11 @@ input#searchbutton
     cursor: pointer;
 }
 
+div#topmenu
+{
+    padding: 0;
+}
+
 div#topmenu ul
 {
     background-image: url(images/topmenu_bg.jpg);
@@ -175,32 +180,35 @@ div#topmenu ul li.lastli
     background-image: none;
 }
 
-div#topmenu div.topmenu-design
-{
-    padding: 0;
-}
-
 div#topmenu ul li a
 {
     color: #FFFFFF;
     font-size: 11px;
     font-weight: normal;
-    border-right: none;
-}
-
-div#topmenu ul li a:hover
-{
-    border-bottom: none;
+    margin: 0;
+    padding: 5px 15px 6px 15px;
 }
 
 div#topmenu ul li.selected a
 {
     background-image: url(images/topmenu_li_selected_bg.jpg);
-    background-position: left top;
+    background-position: top left;
     background-repeat: repeat-x;
-    margin-top: 0;
-    padding-top: 6px;
-    padding-bottom: 5px;
+    margin: 0 1px 0 0;
+    padding-bottom: 0;
+    border-bottom: none;
+}
+
+div#topmenu ul li a:hover
+{
+    border-bottom: none;
+    margin: 0;
+}
+
+div#topmenu ul li.selected a:hover
+{
+    border-bottom: none;
+    margin: 0 1px 0 0;
 }
 
 div#topmenu ul li.selected a span
@@ -209,8 +217,40 @@ div#topmenu ul li.selected a span
     background-image: url(images/topmenu_a_bullet.gif);
     background-position: center bottom;
     background-repeat: no-repeat;
-    padding-bottom: 4px;
-    margin-bottom: -4px;
+    padding-bottom: 6px;
+}
+
+div#topmenu ul#topmenu-secondlevel
+{
+    background-color: #D9EBF5;
+    border-bottom: 1px solid #9ECCE4;
+}
+
+div#topmenu ul#topmenu-secondlevel li
+{
+    background-image: none;
+}
+
+div#topmenu ul#topmenu-secondlevel li a
+{
+    color: #555;
+}
+
+div#topmenu ul#topmenu-secondlevel li a:hover
+{
+    color: #111;
+    padding-bottom: 0;
+}
+
+div#topmenu ul#topmenu-secondlevel li.selected a
+{
+    background-image: none;
+}
+
+div#topmenu ul#topmenu-secondlevel li.selected a span
+{
+    background-image: none;
+    padding-bottom: 0;
 }
 
 div#sidemenu h4
